--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <header>
-        <h1>Hello I'm AzusagawaS</h1>
-        <p>Welcome to My Personal Website</p>
-    </header>
+        <header class="head">
+            <div class="switch"></div>
+            <h1 class="hello">Hello I'm AzusagawaSakuta</h1>
+            <p class="welcome">Welcome to My Personal Website</p>
+            <img src="resources/Photo.jpg" class="hiddenimage" />
+        </header> 
 
     <section class="social">
-        <h2>social midea</h2>
+        <h2>Links To My Accounts</h2>
         <ul class="social-list">
             <li>
                 <a href="https://github.com/ExpLoiAT" target="_blank" rel="noopener noreferrer">
