--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2>Links To My Accounts</h2>
         <ul class="social-list">
             <li>
-                <a href="https://github.com/ExpLoiAT" target="_blank" rel="noopener noreferrer">
+                <a href="https://github.com/AzusagawaSakuta131" target="_blank" rel="noopener noreferrer">
                     <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/github.svg" alt="GitHub" />
                     GitHub
                 </a>
