--- a/index.html
+++ b/index.html
@@ -2,18 +2,17 @@
 <html lang="en-us">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <title>My Personal Website</title>
     <link rel="stylesheet" href="style.css" />
     <script src="script.js" defer></script>
 </head>
 <body>
-        <header class="head">
-            <div class="switch"></div>
-            <h1 class="hello">Hello I'm AzusagawaSakuta</h1>
-            <p class="welcome">Welcome to My Personal Website</p>
-            <img src="resources/Photo.jpg" class="hiddenimage" />
-        </header> 
+    <div>
+        <h1 class="hello">Hello I'm AzusagawaSakuta</h1>
+        <img class="hiddenimage" src="resources/Photo.jpg"  />
+    </div> 
+    <p class="welcome">Welcome to My Personal Website</p>
 
     <section class="social">
         <h2>Links To My Accounts</h2>
