Improved the implementation of an animation.

--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    <div>
+    <div class="container">
         <h1 class="hello">Hello I'm AzusagawaSakuta</h1>
-        <img class="hiddenimage" src="resources/Photo.jpg"  />
     </div> 
     <p class="welcome">Welcome to My Personal Website</p>
 
